--- a/src/CSS/main.css
+++ b/src/CSS/main.css
@@ -101,6 +101,97 @@
   width: 200px;
 }
 
+/* myエディター */
+.editor_container{
+  width: 1020px;
+  margin: 0 auto;
+}
+
+.editor_title{
+  font-weight: normal;
+  font-size: 20px;
+  padding-top: 20px;
+}
+
+.contents{
+  width: 450px;
+  margin-top: 10px;
+}
+
+.contents > p{
+  margin: 0;
+}
+
+.contents_fix{
+  /* margin-top: 20px; */
+  display: flex;
+}
+
+.text_input{
+  width: 300px;
+  margin-left: 20px;
+}
+
+select {
+  /* 初期化 */
+  appearance: none;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  background: none;
+  border: none;
+  color: #333;
+  font-size: 16px;
+  width: 100%;
+  height: 100%;
+  padding: 0 10px;
+}
+
+.select{
+  margin-left: 20px;
+  background: #fff;
+  height: 40px;
+  width: 300px;
+  border: 1px solid rgb(223, 223, 223);
+  border-radius: 5px;
+  position: relative;
+  z-index: 1;
+}
+
+.select::after {
+  position: absolute;
+  content: '';
+  width: 8px;
+  height: 8px;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%) rotate(45deg);
+  border-bottom: 2px solid #fff;
+  border-right: 2px solid #fff;
+  z-index: -1;
+}
+
+textarea{
+  margin-left: 20px;
+  width: 500px;
+  max-height: 170px;
+  padding: 8px;
+  box-sizing: border-box;
+  border-radius: 5px;
+  border: 1px solid #e5e5e5;
+  font-size: 14px;
+  outline: none;
+  line-height: 1.6;
+  resize: vertical;
+}
+
+.input_text{
+  padding-top: 4px;
+  padding-left: 20px;
+  color: #555;
+  font-size: 12px;
+}
+
+
 /* フッター */
 .footer{
   margin: 30px auto;
