--- a/src/CSS/main.css
+++ b/src/CSS/main.css
@@ -134,10 +134,10 @@
 
 select {
   /* 初期化 */
-  appearance: none;
-  -moz-appearance: none;
-  -webkit-appearance: none;
-  background: none;
+  /* appearance: none; */
+  /* -moz-appearance: none; */
+  /* -webkit-appearance: none; */
+  /* background: none; */
   border: none;
   color: #333;
   font-size: 16px;
@@ -191,9 +191,9 @@ textarea{
   font-size: 12px;
 }
 
-
 /* フッター */
 .footer{
+  width: 100%;
   margin: 30px auto;
   text-align: center;
   background-color: #2285d0;
