--- a/src/CSS/main.css
+++ b/src/CSS/main.css
@@ -191,6 +191,103 @@ textarea{
   font-size: 12px;
 }
 
+/* 管理者画面 */
+.k_title{
+  color: #333;
+  font-weight: normal;
+  width: 1020px;
+  margin: 0 auto;
+  font-size: 24px;
+  padding-top: 30px;
+}
+
+.k_top_container{
+  background-color: rgb(244, 244, 244);
+  width: 100%;
+  padding: 30px;
+  margin-top: 30px;
+}
+
+
+.k_top_contents{
+  width: 1020px;
+  display: flex;
+  margin: 10px auto;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.k_content{
+  width: 320px;
+  height: 300px;
+  background-color: white;
+  border-radius: 10px;
+  text-align: center;
+}
+
+.k_title_mini{
+  padding-top: 30px;
+  font-size: 16px;
+  text-align: left;
+}
+
+.k_head{
+  color: #333;
+  font-size: 16px;
+  padding: 10px;
+}
+/* 
+#k_thead{
+  display: none;
+} */
+
+.hide{
+  height: 200px;
+  padding: 10px;
+  /* display: none; */
+  overflow: scroll;
+}
+
+.hide::-webkit-scrollbar {
+  display:none;
+}
+
+table{
+  margin-top: 10px;
+  width: 100%;
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+table th{
+  padding: 10px 0;
+  text-align: center;
+  background-color: #2285d0;
+  color: #fff;
+}
+
+table th:first-child{
+  border-radius: 5px 0 0 0;
+}
+
+table th:last-child{
+  border-radius: 0 5px 0 0;
+}
+
+.k_td{
+  padding: 10px 0;
+  text-align: center;
+}
+
+table tr:nth-child(odd){
+  background-color: #eee
+}
+
+.k_keyword{
+  text-align: center;
+  font-size: 20px;
+}
+
 /* フッター */
 .footer{
   width: 100%;
@@ -200,7 +297,24 @@ textarea{
   height: 100px;
 }
 
+.s_footer{
+  width: 100%;
+  /* margin: 30px auto; */
+  text-align: center;
+  background-color: #2285d0;
+  height: 100px;
+}
+
 .footer > p{
+  font-size: 12px;
+  letter-spacing: 1px;
+  width: 300px;
+  margin: 0 auto;
+  padding-top: 20px;
+  color: white;
+}
+
+.s_footer > p{
   font-size: 12px;
   letter-spacing: 1px;
   width: 300px;
