82-投稿日付の追加

--- a/src/CSS/main.css
+++ b/src/CSS/main.css
@@ -101,6 +101,11 @@
   width: 200px;
 }
 
+.new_postdate{
+  color: rgb(150, 150, 150);
+  margin-bottom: 14px;
+}
+
 /* myエディター */
 .editor_container{
   width: 1020px;
