--- a/src/CSS/main.css
+++ b/src/CSS/main.css
@@ -106,6 +106,10 @@
   margin-bottom: 14px;
 }
 
+.button{
+  margin-bottom: 20px;
+}
+
 /* myエディター */
 .editor_container{
   width: 1020px;
@@ -240,15 +244,22 @@ textarea{
   color: #333;
   font-size: 16px;
   padding: 10px;
+  margin: 0;
 }
-/* 
+/*
 #k_thead{
   display: none;
 } */
 
+.k_editor_title{
+  font-weight: normal;
+  font-size: 20px;
+}
+
+
 .hide{
   height: 200px;
-  padding: 10px;
+  padding: 8px;
   /* display: none; */
   overflow: scroll;
 }
@@ -293,13 +304,96 @@ table tr:nth-child(odd){
   font-size: 20px;
 }
 
+.ke_container{
+  height: 68%;
+  width: 1020px;
+  margin: 0 auto;
+    position: relative;
+
+}
+
+.ke_card{
+  background-color: #dee7f0;
+  margin: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform : translate(-50%,-50%);
+  transform : translate(-50%,-50%);
+  height: 400px;
+  width: 700px;
+  /* text-align: center; */
+  padding: 50px;
+  border-radius: 20px;
+}
+
+.ke_contents_fix{
+  display: flex;
+  align-items: baseline;
+  height: 70px;
+  padding: 0 30px;
+  justify-content: space-between;
+}
+
+.ke_contents_fix1{
+  display: flex;
+  align-items: baseline;
+  height: 70px;
+  padding: 0 30px;
+}
+
+.ke_select{
+  margin-left: 20px;
+  background-color: #dee7f0;
+  height: 40px;
+  width: 200px;
+  border: 3px dashed #fff;
+  border-radius: 5px;
+  position: relative;
+  z-index: 1;
+}
+
+.ke_select::after {
+  position: absolute;
+  content: '';
+  width: 8px;
+  height: 8px;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%) rotate(45deg);
+  /* border-bottom: 2px solid #fff; */
+  /* border-right: 2px solid #fff; */
+  z-index: -1;
+}
+
+.ke_logo{
+  width: 180px;
+  margin-left: 70%;
+}
+
+.ke_logo > img {
+  width: 100%;
+  object-fit: cover;
+}
+
+.ke_p{
+  margin: 0;
+  font-size: 16px;
+}
+
+.ke_div{
+  margin-top: 30px;
+}
+
 /* フッター */
 .footer{
   width: 100%;
-  margin: 30px auto;
+  margin-top: 30px;
   text-align: center;
   background-color: #2285d0;
   height: 100px;
+  position: absolute;
+  bottom: 0;
 }
 
 .s_footer{
@@ -308,6 +402,8 @@ table tr:nth-child(odd){
   text-align: center;
   background-color: #2285d0;
   height: 100px;
+  position: absolute;
+  bottom: 0;
 }
 
 .footer > p{
