--- a/src/CSS/login.css
+++ b/src/CSS/login.css
@@ -1,5 +1,11 @@
-*{
+/* *{
   color: #333;
+  margin: 0;
+  padding: 0;
+} */
+
+body{
+  height: 0;
 }
 
 .header_logo{
@@ -26,13 +32,13 @@
 
 .title{
   font-weight: normal;
-  font-size: 20px;
-  padding-top: 20px;
+  font-size: 16px;
+  padding-top: 16px;
 }
 
 .contents{
   width: 350px;
-  margin: 10px ;
+  margin: 10px;
   /* display: flex; */
   text-align: center;
   align-items: flex-end;
@@ -147,14 +153,43 @@ textarea{
 }
 }
 
+.e_container{
+  width: 1020px;
+  margin: 30px auto;
+
+}
+
+legend{
+  font-size: 20px;
+  margin-bottom: 30px;
+}
+
+.label{
+  font-size: 20px;
+  padding: 0 30px 2px 10px;
+  border-bottom: 2px solid #2285d0;
+}
+
+.e_contents{
+  margin-bottom: 25px;
+  padding-bottom: 10px;
+  width: 700px;
+}
+
+.label_fix{
+  display: flex;
+}
+
 
 /* フッター */
 .footer{
   width: 100%;
-  margin: 120px auto;
+  margin-top: 120px;
   text-align: center;
   background-color: #2285d0;
-  height: 110px;
+  height: 80px;
+  position: absolute;
+  bottom: 0;
 }
 
 .footer > p{
