--- a/src/CSS/main.css
+++ b/src/CSS/main.css
@@ -124,7 +124,7 @@
 
 .contents{
   width: 450px;
-  margin-top: 10px;
+  margin-top: 20px;
 }
 
 .contents > p{
@@ -384,6 +384,18 @@ table tr:nth-child(odd){
 .ke_div{
   margin-top: 30px;
 }
+
+.m_container{
+  width: 1020px;
+  margin: 50px auto;
+}
+
+.m_text{
+  width: 750px;
+  height: 200px;
+  font-size: 18px;
+}
+
 
 /* フッター */
 .footer{
