--- a/src/CSS/entrychk.css
+++ b/src/CSS/entrychk.css
@@ -3,10 +3,10 @@
   margin: 0;
   padding: 0;
 } */
-body{
+/* body{
   height: 0;
   width: 0;
-}
+} */
 
 .header_logo{
   width: 350px;
@@ -62,19 +62,6 @@ body{
   /* margin-left: 20px; */
 }
 
-select {
-  /* 初期化 */
-  /* appearance: none; */
-  /* -moz-appearance: none; */
-  /* -webkit-appearance: none; */
-  /* background: none; */
-  border: none;
-  color: #333;
-  font-size: 16px;
-  width: 100%;
-  height: 100%;
-  padding: 0 10px;
-}
 
 .select{
   margin-left: 20px;
@@ -160,19 +147,20 @@ textarea{
 }
 
 legend{
-  font-size: 20px;
-  margin-bottom: 30px;
+  font-size: 30px;
+  margin: 50px;
 }
 
 .label{
   font-size: 20px;
-  padding: 0 30px 2px 10px;
+  padding: 10px 30px 40px 10px;
   border-bottom: 2px solid #2285d0;
 }
 
 .e_contents{
   margin-bottom: 25px;
-  padding-bottom: 10px;
+  padding-bottom: 30px;
+  padding-top: 30px;
   width: 700px;
 }
 
@@ -183,13 +171,13 @@ legend{
 
 /* フッター */
 .footer{
-  width: 100%;
+  width: 100vw;
   margin-top: 120px;
   text-align: center;
   background-color: #2285d0;
   height: 80px;
-  position: absolute;
-  bottom: 0;
+  /* position: absolute; */
+  /* bottom: 0; */
 }
 
 .footer > p{
