--- a/src/CSS/responsive.css
+++ b/src/CSS/responsive.css
@@ -122,6 +122,7 @@
 .editor_container{
   width: 1020px;
   margin: 0 auto;
+  height: 600px;
 }
 
 .editor_title{
@@ -476,8 +477,8 @@ table th:last-child{
 
 .m_container{
   width: 1020px;
-  margin: 40px auto;
-  padding-bottom: 50px;
+  margin: 50px auto;
+  padding: 50px 0;
 }
 
 .m_text{
@@ -579,4 +580,25 @@ table th:last-child{
   margin: 0 auto;
   padding-top: 20px;
   color: white;
+}
+
+@media screen and (min-width:1500px) {
+.footer{
+  width: 100%;
+  margin-top: 120px;
+  text-align: center;
+  background-color: #2285d0;
+  height: 80px;
+  position: absolute;
+  bottom: 0;
+}
+
+.footer > p{
+  font-size: 12px;
+  letter-spacing: 1px;
+  width: 300px;
+  margin: 0 auto;
+  padding-top: 20px;
+  color: white;
+}
 }
