--- a/src/CSS/responsive.css
+++ b/src/CSS/responsive.css
@@ -35,6 +35,31 @@
   margin-left: 70%;
 }
 
+
+#loader-bg {
+  display: none;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+  background: #fff;
+  z-index: 1;
+}
+#loader {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: 200px;
+  height: 200px;
+  margin-top: -100px;
+  margin-left: -100px;
+  text-align: center;
+  z-index: 2;
+}
+
+
 /* メイン */
 .main_container{
   width: 1020px;
