--- a/src/CSS/update.css
+++ b/src/CSS/update.css
@@ -140,6 +140,17 @@ select {
   font-size: 16px;
 }
 
+.kp_u{
+  font-size: 40px;
+  font-weight: bold;
+}
+
+.kp_u_r{
+  font-size: 40px;
+  font-weight: bold;
+  margin-left: 100px;
+}
+
 
 /* フッター */
 .footer{
@@ -159,4 +170,72 @@ select {
   margin: 0 auto;
   padding-top: 20px;
   color: white;
+}
+
+@media screen and (max-width:1920x) {
+
+  .kp_u{
+    font-size: 30px;
+    font-weight: bold;
+  }
+
+  .kp_u_r{
+    font-size: 30px;
+    font-weight: bold;
+    margin-left: 80px;
+  }
+
+  .ke_p{
+    margin: 0;
+    padding: 10px 0 10px 0;
+    font-size: 16px;
+  }
+
+  .container {
+  width: 1020px;
+  margin: 0 auto;
+  overflow: scroll;
+}
+
+.ke_contents_fix1{
+  display: flex;
+  align-items: baseline;
+  height: 50px;
+  padding: 0 30px;
+}
+
+  .ke_card{
+    background-color: #dee7f0;
+    /* margin: auto; */
+    /* position: absolute; */
+    /* top: 50%; */
+    /* left: 50%; */
+    /* -webkit-transform : translate(-50%,-50%); */
+    /* transform : translate(-50%,-50%); */
+    height: 350px;
+    width: 650px;
+    /* text-align: center; */
+    padding: 50px;
+    margin: 50px auto;
+    border-radius: 20px;
+  }
+
+.footer{
+  width: 100%;
+  margin-top: 120px;
+  text-align: center;
+  background-color: #2285d0;
+  height: 60px;
+  /* position: absolute; */
+  /* bottom: 0; */
+}
+
+.footer > p{
+  font-size: 12px;
+  letter-spacing: 1px;
+  width: 300px;
+  margin: 0 auto;
+  padding-top: 8px;
+  color: white;
+}
 }
