--- a/src/CSS/responsive.css
+++ b/src/CSS/responsive.css
@@ -148,7 +148,7 @@
 /* myエディター */
 .editor_container{
   width: 1020px;
-  margin: 0 auto;
+  margin: 50px auto 150px auto;
   /* height: 600px; */
 }
 
@@ -339,6 +339,7 @@ table th:last-child{
 }
 
 .table_height{
+  margin: 50px auto 150px auto;
   height: 600px;
 }
 
@@ -504,7 +505,7 @@ table th:last-child{
   font-weight: normal;
   font-size: 20px;
   margin: 0;
-  padding: 30px;
+  padding: 30px 30px 0 30px;
 }
 
 .pager{
@@ -522,7 +523,7 @@ table th:last-child{
 
 .m_container{
   width: 1020px;
-  margin: 20px auto;
+  margin: 50px auto;
   height: 750px;
 }
 
@@ -626,8 +627,8 @@ table th:last-child{
   padding-top: 20px;
   color: white;
 }
-
-@media screen and (min-width:1500px) {
+/*
+@media screen and (min-width:1px) {
 .footer{
   width: 100%;
   margin-top: 120px;
@@ -646,4 +647,4 @@ table th:last-child{
   padding-top: 20px;
   color: white;
 }
-}
+} */
