--- a/src/CSS/my_profile.css
+++ b/src/CSS/my_profile.css
@@ -8,13 +8,6 @@ main{
   margin-top: 120px;
 }
 
-input{
-  border-bottom: 1px gray solid;
-}
-
-img{
-  border: 1px gray solid;
-}
 
 textarea{
   width: 100%;
@@ -126,6 +119,7 @@ textarea{
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border: 1px gray solid;
 }
 .icon_area_img > label >i{
   font-size: 28px;
@@ -218,6 +212,29 @@ textarea{
   padding: 5px;
   width: 50%;
 }
+
+/* -------------------------------------------------- */
+/* 追加対応 SNSリンク */
+/* -------------------------------------------------- */
+.sns_link{
+  width: 100%;
+  padding: 10px;
+}
+.sns_link > table{
+  width: 100%;
+}
+.cell2{
+  width: 100%;
+}
+
+.cell2 > td {
+  width: 100%;
+}
+
+.cell2 > td > input{
+  width: 100%;
+}
+
 
 /* -------------------------------------------------- */
 /* プロフィールの２番目のブロック（ポートフォリオ） */
